@@ -106,6 +106,8 @@ mock 0.8.0 is the last version that will support Python 2.4.
   mocks
 * `patch.multiple` for doing multiple patches in a single call, using keyword
   arguments
+* Setting `side_effect` to an iterable will cause calls to the mock to return
+  the next value from the iterable
 * New `new_callable` argument to `patch` and `patch.object` allowing you to
   pass in a class or callable object (instead of `MagicMock`) that will be
   called to replace the object being patched
@@ -153,6 +155,8 @@ mock 0.8.0 is the last version that will support Python 2.4.
 2011/XX/XX Version 0.8.0 beta 2
 -------------------------------
 
+* Setting `side_effect` to an iterable will cause calls to the mock to return
+  the next value from the iterable
 * BUGFIX: `call_args` and all members of `call_args_list` are two tuples of
   `(args, kwargs)` again instead of three tuples of `(name, args, kwargs)`
 
